--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chai": "^1.9.1",
     "coveralls": "^2.11.1",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jade": "^0.12.0",
