user login and register

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "underscore": "~1.7.0",
     "jquery": "~2.1.1",
     "angular-bootstrap": "~0.11.0",
-    "angular-snap": "~1.6.0"
+    "angular-snap": "~1.6.0",
+    "toastr": "~2.0.3",
+    "angular-localforage": "~0.2.10"
   }
 }
