--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "async": "^0.9.0",
     "bcrypt": "^0.8.0",
     "body-parser": "^1.8.1",
+    "chai": "^1.9.1",
     "chalk": "^0.5.1",
     "connect-redis": "^2.1.0",
     "express": "^4.9.0",
