location map centered on user

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-bootstrap": "~0.11.0",
     "angular-snap": "~1.6.0",
     "toastr": "~2.0.3",
-    "angular-localforage": "~0.2.10"
+    "angular-localforage": "~0.2.10",
+    "ng-table": "~0.3.3"
   }
 }
