--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
     "toastr": "~2.0.3",
     "angular-localforage": "~0.2.10",
     "ng-table": "~0.3.3"
+  },
+  "resolutions": {
+    "angular": "1.3.0-rc.0"
   }
 }
