--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-snap": "~1.6.0",
     "toastr": "~2.0.3",
     "angular-localforage": "~0.2.10",
-    "ng-table": "~0.3.3"
+    "ng-table": "~0.3.3",
+    "angular-sanitize": "~1.2.26"
   },
   "resolutions": {
     "angular": "1.3.0-rc.0"
