--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "morgan": "^1.3.0",
     "multiparty": "^3.3.2",
     "request": "^2.42.0",
+    "supertest": "^0.13.0",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
