--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "mongodb": "^1.4.10",
     "morgan": "^1.3.0",
     "multiparty": "^3.3.2",
+    "node-tweet-stream": "^1.4.2",
     "request": "^2.42.0",
+    "socket.io": "^1.1.0",
     "supertest": "^0.13.0",
     "underscore": "^1.7.0"
   },
